# osu-mania-skin_ini_editor

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_linux.sh  build_windows.bat  update_log.txt
for_test/: skin.ini
include/: buffer.h  editor.h  tool.h
src/: buffer.c  editor.c  main.c  my_head.h  tool.c
